# zcmds_win32

./: .gitignore  MANIFEST.in  README.md  lint  lint.sh  pyproject.toml  requirements.testing.txt  setup.py  tox.ini  upload_package.sh
.github/workflows/: lint.yml  push_win.yml
assets/wezterm/scripts_win/: action_kill.lua  rc_right_click.lua  shell_gitbash.lua  wezterm.lua
tests/: test_dig.py  test_git_bin_install.py  test_main.py
zcmds_win32/: _exec.py  cat.py  cp.py  du.py  elevated_exec.py  fixvmmem.py  grep.py  install_tool.py  ls.py  md5sum.py  mv.py  no.py  open.py  pico.py  ps.py  rm.py  settings.py  tee.py  unix_tool_path.py  unzip.py  version.py  wc.py  which.py  yes.py
zcmds_win32/cmds/: [.py  arch.py  awk.py  cp.py  date.py  dig.py  dirname.py  fixvmmem.py  git_bash.py  home.py  id.py  make.py  open.py  pip3.py  pwd.py  python3.py  realpath.py  rm.py  sed.py  ssh-pageant.py  ssh.py  ssh_add.py  ssh_agent.py  ssh_keygen.py  ssh_keyscan.py  ssh_pass.py  sshd.py  uname.py  uniq.py  xargs.py  yes.py  zcmds_win32.py
