[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zcmds_win32"
description = "Cross platform(ish) productivity commands written in python."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["zcmds", "win32", "zcmds_win32", "zcmds-win32", "cli", "command line", "command line interface"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "sudo_win32[sudo]",
    "download",
]
# Change this with the version number bump.
version = "1.0.26"


[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring,missing-function-docstring"

[project.scripts]
cat = "zcmds_win32.cmds.cat:main"
cp = "zcmds_win32.cmds.cp:main"
du = "zcmds_win32.cmds.du:main"
fixvmmem = "zcmds_win32.cmds.fixvmmem:main"
git-bash = "zcmds_win32.cmds.git_bash:main"
grep = "zcmds_win32.cmds.grep:main"
home = "zcmds_win32.cmds.home:main"
id = "zcmds_win32.cmds.id:main"
ls = "zcmds_win32.cmds.ls:main"
md5sum = "zcmds_win32.cmds.md5sum:main"
mv = "zcmds_win32.cmds.mv:main"
nano = "zcmds_win32.cmds.nano:main"
open = "zcmds_win32.cmds.open:main"
pico = "zcmds_win32.cmds.pico:main"
ps = "zcmds_win32.cmds.ps:main"
pwd = "zcmds_win32.cmds.pwd:main"
rm = "zcmds_win32.cmds.rm:main"
tee = "zcmds_win32.cmds.tee:main"
touch = "zcmds_win32.cmds.touch:main"
unzip = "zcmds_win32.cmds.unzip:main"
wc = "zcmds_win32.cmds.wc:main"
which = "zcmds_win32.cmds.which:main"
xargs = "zcmds_win32.cmds.xargs:main"
yes = "zcmds_win32.cmds.yes:main"
sed = "zcmds_win32.cmds.sed:main"